// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`loadLatestAssets > returns valid JSON + installer 1`] = `
[
  {
    "architecture": "arch_mock",
    "binaries": [
      {
        "checksum": "checksum_mock",
        "extension": "tar.gz",
        "installer_checksum": "installer_checksum_mock",
        "installer_extension": ".msi",
        "installer_link": "https://installer_link_mock/",
        "installer_size": 0,
        "link": "https://link_mock/",
        "size": 0,
        "type": "JRE",
      },
    ],
    "os": "os_mock",
    "platform_name": "os_mock-arch_mock",
    "release_date": 2020-01-01T00:00:00.000Z,
    "release_link": "https://release_link_mock/",
    "release_name": "release_name_mock",
  },
]
`;

exports[`loadLatestAssets > returns valid JSON 1`] = `
[
  {
    "architecture": "arch_mock",
    "binaries": [
      {
        "checksum": "checksum_mock",
        "extension": "tar.gz",
        "link": "https://link_mock/",
        "size": 0,
        "type": "JDK",
      },
    ],
    "os": "os_mock",
    "platform_name": "os_mock-arch_mock",
    "release_date": 2020-01-01T00:00:00.000Z,
    "release_link": "https://release_link_mock/",
    "release_name": "release_name_mock",
  },
]
`;

exports[`loadLatestAssets > source image is processed correctly 1`] = `
[
  {
    "architecture": "arch_mock",
    "binaries": [
      {
        "checksum": "checksum_mock",
        "extension": "tar.gz",
        "link": "https://link_mock/",
        "size": 0,
        "type": "JDK",
      },
    ],
    "os": "os_mock",
    "platform_name": "os_mock-arch_mock",
    "release_date": 2020-01-01T00:00:00.000Z,
    "release_link": "https://release_link_mock/",
    "release_name": "release_name_mock",
  },
]
`;
